--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <div class="main-div">
     <p class="game-title">Rock Paper Scissors</p>
     <button onclick="playGame('Rock')" class="move-btn">
-      <img class="move-icon" src="/9thDom/rock-paper-scissors-game/images/rock-emoji.png" alt="Rock">
+      <img class="move-icon" src="images/rock-emoji.png" alt="Rock">
     </button>
     
     <button onclick="playGame('Paper')" class="move-btn">
-      <img class="move-icon" src="/9thDom/rock-paper-scissors-game/images/paper-emoji.png" alt="Paper">
+      <img class="move-icon" src="images/paper-emoji.png" alt="Paper">
     </button>
 
     <button onclick="playGame('Scissors')" class="move-btn">
-      <img class="move-icon" src="/9thDom/rock-paper-scissors-game/images/scissors-emoji.png" alt="Scissor">
+      <img class="move-icon" src="images/scissors-emoji.png" alt="Scissor">
     </button>
 
     <p class="js-result result"></p>
